-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.5.4, 6.5.5, 6.7.0, 6.8.0
-
-
f71ef0d8b (dev), 9c0aa4cbb (6.8), 9f04990d9 (tqtc/lts-6.5)
Qml Popup component is not closing anymore when instantiated via QQuickWidget.
To reproduce the issue:
- Run the example project.
- Click on the the 3 dots to open the popup menu.
- Click anywhere outside the popup menu.
- The popup menu doesn't close and it's still open.
Notes:
The issue doesn't exist in versions less than 6.5.3.
The issue doesn't show up in a standard Quick application.